objects/PC_Error_Log_Info__e.object
<CustomObject>
    <description>Object to hold information about the published error log</description>
    <fields>
        <fullName>PC_Additional_Information__c</fullName>
        <description>Additional info, if applicable, such as error notes or developer hints</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Class_Name__c</fullName>
        <description>Name of the Apex class where the exception or error is originated</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Error_DateTime__c</fullName>
        <description>The date and time the error occurred</description>
        <label>Error Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Line_Number__c</fullName>
        <description>Line number where the exception or error is originated</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Log_Level__c</fullName>
        <description>Code to represent the cause of the exception or error</description>
        <label>Log Level</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Method_Name__c</fullName>
        <description>Name of the Apex method where the exception or error is originated</description>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_OwnerId__c</fullName>
        <description>Salesforce ID of the owner who published the event</description>
        <label>OwnerId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Record_ID__c</fullName>
        <description>Record ID which is involved in the exception or error</description>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Running_User__c</fullName>
        <description>Salesforce ID of the user who published the event</description>
        <label>Running User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Stack_Trace__c</fullName>
        <description>The system stack trace for the error, if one exists</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Log Info</label>
    <pluralLabel>Error Logs Info</pluralLabel>
</CustomObject>